--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "build_gen":"peggy --format es ../genlang/genlang.peggy -o ./src/genlang/genlang.js"
+    "build_gen":"peggy --format es ../genlang/genlang.peggy -o ./src/genlang/genlang.js",
+    "build_all":"npm run build_gen && npm run build"
   },
   "dependencies": {
     "vue": "^3.5.18"
